<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CoinInformationActivity"
    android:background="@color/black">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tbCoinInformation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iwCoinInfoPicture"
            android:layout_width="35dp"
            android:layout_height="35dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/twCoinInfo"
            app:layout_constraintStart_toEndOf="@+id/btnAddCoinBack"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/twCoinInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="monospace"
            android:letterSpacing="0.2"
            android:maxLines="1"
            android:text="@string/tvCoinInformationID"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnAddCoinToPortfolio"
            app:layout_constraintStart_toEndOf="@+id/iwCoinInfoPicture"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_conversion_absoluteHeight="32dp"
            tools:layout_conversion_absoluteWidth="39dp" />

        <Button
            android:id="@+id/btnAddCoinBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:backgroundTint="@color/black"
            android:minWidth="20dp"
            android:minHeight="20dp"
            android:text="@string/x"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/iwCoinInfoPicture"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_conversion_absoluteHeight="53dp"
            tools:layout_conversion_absoluteWidth="50dp" />

        <Button
            android:id="@+id/btnAddCoinToPortfolio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:fontFamily="monospace"
            android:text="@string/add_coind"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:minWidth="20dp"
            android:minHeight="48dp"
            android:textColorHint="@color/white"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tbCoinInformation">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >




            <TextView
                android:id="@+id/tvCointInfoMarkeGainAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="monospace"
                android:text="@string/amountt"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline4"
                app:layout_constraintTop_toBottomOf="@+id/tvCointInfoMarketValue" />

            <TextView
                android:id="@+id/CointInfoGain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="monospace"
                android:text="@string/market_value"
                android:textColor="@color/white"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />



            <TextView
                android:id="@+id/tvCointInfoMarketValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="monospace"
                android:text="@string/gain"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline4"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/tvCointInfoMarketValueAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="monospace"
                android:text="@string/value"
                android:textColor="@color/white"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvCointInfoMarketValue" />


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <TextView
                android:id="@+id/twCoinInfoValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:fontFamily="monospace"
                android:text="@string/value"
                android:textColor="@color/white"
                android:textSize="45dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvCointInfoMarketValueAmount" />


            <TextView
                android:id="@+id/tvMarketCapRank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:fontFamily="monospace"
                android:text="@string/market_cap_rank"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/twCoinInfoValue" />

            <TextView
                android:id="@+id/tvMarketCapRankValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:fontFamily="monospace"
                android:text="@string/value"
                android:textColor="@color/white"
                app:layout_constraintStart_toEndOf="@id/tvMarketCapRank"
                app:layout_constraintTop_toBottomOf="@+id/twCoinInfoValue" />

            <TextView
                android:id="@+id/tvMarketCap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:fontFamily="monospace"
                android:text="@string/market_cap"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvMarketCapRank" />

            <TextView
                android:id="@+id/tvMarketCapValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:fontFamily="monospace"
                android:text="VALUE"
                android:textColor="@color/white"
                app:layout_constraintStart_toEndOf="@id/tvMarketCap"
                app:layout_constraintTop_toBottomOf="@+id/tvMarketCapRank" />

            <TextView
                android:id="@+id/tvTotalSupply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:fontFamily="monospace"
                android:text="@string/total_supply"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvMarketCap" />

            <TextView
                android:id="@+id/tvTotalSupplyValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:fontFamily="monospace"
                android:text="@string/value"
                android:textColor="@color/white"
                app:layout_constraintStart_toEndOf="@id/tvTotalSupply"
                app:layout_constraintTop_toBottomOf="@+id/tvMarketCap" />

            <TextView
                android:id="@+id/tvTradingVolume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:fontFamily="monospace"
                android:text="@string/tradinng_volume"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTotalSupply" />

            <TextView
                android:id="@+id/tvTradingVolumeValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:fontFamily="monospace"
                android:text="@string/value"
                android:textColor="@color/white"
                app:layout_constraintStart_toEndOf="@id/tvTradingVolume"
                app:layout_constraintTop_toBottomOf="@+id/tvTotalSupply" />




            <TextView
                android:id="@+id/tvCoinInformationDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:fontFamily="monospace"
                android:text="@string/description_text"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTradingVolumeValue"
                app:layout_constraintVertical_bias="0.0" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>