<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black">

    <TextView
        android:id="@+id/tvCoinId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginStart="8dp"
        android:text="Coin"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:fontFamily="monospace"
        app:layout_constraintStart_toEndOf="@+id/iwCoinPicture"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/iwCoinPicture"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toTopOf="@+id/glHorizontalEnd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCoinName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/coin"
        android:textColor="@color/white"
        android:fontFamily="monospace"
        app:layout_constraintBottom_toTopOf="@+id/glHorizontalEnd"
        app:layout_constraintStart_toEndOf="@+id/iwCoinPicture"
        app:layout_constraintTop_toBottomOf="@+id/tvCoinId" />

    <TextView
        android:id="@+id/tvCoinPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/price"
        android:textColor="@color/white"
        android:fontFamily="monospace"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/glVertical"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCoinAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/amount"
        android:textColor="@color/white"
        android:fontFamily="monospace"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toTopOf="@+id/glHorizontalEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/glVertical"
        app:layout_constraintTop_toBottomOf="@+id/tvCoinPrice" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glVertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glHorizontalEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="55dp" />


</androidx.constraintlayout.widget.ConstraintLayout>